# pei-nwdaf-comms

./: README.md
dlt/: .gitignore  Dockerfile.tools  start.sh  stop.sh  test.sh
dlt/chaincode/: .project  Dockerfile  build.gradle
dlt/dlt-package/: pyproject.toml
dlt/dlt-package/dlt-client/: __init__.py  analytics.py  models.py  test.py
dlt/dlt-package/dlt_client/: analytics.py  inference.py
dlt/fabric-client/: .project  Dockerfile  build.gradle
dlt/fabric-network/: configtx.yaml  crypto-config.yaml  docker-compose.yaml
dlt/fabric-network/scripts/: bootstrap.sh  deploy-chaincode.sh  setup-channels.sh
dv/: .gitignore  docker-compose.yml
dv/backend/: .env.example  Dockerfile  requirements.txt
dv/backend/app/: main.py
dv/backend/app/api/: websocket.py
dv/backend/app/core/: config.py  logging.py  security.py  state.py
dv/backend/app/models/: schemas.py
dv/backend/tests/: conftest.py  test_api_boxes.py  test_api_images.py  test_api_lines.py  test_security.py
dv/backend/uploads/: .gitkeep
dv/frontend/: Dockerfile.prod  nginx.conf  package-lock.json  package.json  vitest.config.js
dv/frontend/public/: index.html  manifest.json
dv/frontend/src/: App.css  App.js  flow.css  index.css
kafka/: pyproject.toml  requirements.txt  topic.sh
kafka/src/: __init__.py  kmw.py
kafka/tests/: pytest.ini  test_initialization.py  test_kmw.py
nginx/: Dockerfile  default.conf
src/: kmw.py
tests/: conftest.py  requirements.txt  test_consumer.py  test_initialization.py  test_integration.py  test_producer.py  test_topic_management.py
(+32 files in other folders)
