[project]
name = "dlt-client"
version = "0.5.0"
description = "Blockchain traceability client"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "tenacity>=8.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dlt_client"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
